# SlicerBRAINS

./: CMakeLists.txt
BRAINSFitUI/: BRAINSFitUI.py  CMakeLists.txt
